--- a/BadammiSite.csproj
+++ b/BadammiSite.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Pages\Index.cshtml.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\Resource\Photo\" />
